# beets

./: .git-blame-ignore-revs  CONTRIBUTING.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml
beets/: __init__.py  config_default.yaml  importer.py  library.py  logging.py  metadata_plugins.py  plugins.py
beets/autotag/: __init__.py  distance.py  hooks.py  match.py  mb.py
beets/dbcore/: __init__.py  db.py  fields.py  query.py  queryparse.py  types.py
beets/importer/: __init__.py  session.py  stages.py  tasks.py
beets/test/: _common.py  helper.py
beets/ui/: __init__.py  commands.py  display.py  table.py
beets/util/: __init__.py  artresizer.py  color.py  confit.py  diff.py  functemplate.py  id_extractors.py
beetsplug/: acousticbrainz.py  aura.py  autobpm.py  bandcamp  beatport.py  bench.py  bpsync.py  chroma.py  convert.py  deezer.py  discogs.py  edit.py  embedart.py  fetchart.py  fish.py  fromfilename.py  ftintitle.py  ipfs.py  lastimport.py  limit.py  listenbrainz.py  lyrics.py  mbcollection.py  mbsubmit.py  mbsync.py  missing.py  mpdstats.py  musicbrainz.py  play.py  playlist.py  replace.py  replaygain.py  rewrite.py  smartplaylist.py  spotify.py  thumbnails.py  types.py  zero.py
beetsplug/_utils/: musicbrainz.py  requests.py
beetsplug/bpd/: __init__.py  gstplayer.py
beetsplug/lyrics/: types.py  (+1 more)
docs/: changelog.rst  conf.py
test/: conftest.py  test_art.py  test_autotag.py  test_dbcore.py  test_files.py  test_importer.py  test_library.py  test_logging.py  test_plugins.py  test_query.py  test_ui.py  test_ui_importer.py  test_util.py
(+61 files in other folders)
