[tool.poetry]
name = "beets"
version = "1.6.1-alpha.0"
description = "music tagger and library organizer"
authors = ["Adrian Sampson <adrian@radbox.org>"]
readme = "README.rst"
license = "Proprietary"
homepage = "https://github.com/beetbox/beets"
repository = "https://github.com/beetbox/beets"

packages = [
    { include = "beets" },
    { include = "beetsplug" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
confuse = ">=1.0.0"
mediafile = ">=0.2.0"
musicbrainzngs = ">=0.4"
pyyaml = "*"
six = ">=1.9"
unidecode = "*"
rich = ">=10.6.0"
jellyfish = "^0.8.2"
munkres = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-coding = "*"
flake8-docstrings = "*"
flake8-future-import = "*"
pep8-naming = "*"

beautifulsoup4 = "*"
coverage = "*"
flask = "*"
mock = "*"
pylast = "*"
pytest = "*"
python-mpd2 = "*"
pyxdg = "*"
responses = ">=0.3.0"
requests_oauthlib = "*"
reflink = "*"
mypy = "*"

discogs-client = "*"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"
types-python-dateutil = "^2.8.2"
types-six = "*"
types-requests = "^2.26.0"

# beetcamp = { path = "../beetcamp", develop = true, python = ">=3.6.2,<3.10" }
rich-tables = { path = "../rich-tables/", develop = true, python = ">=3.6.2,<3.10" }

[tool.poetry.scripts]
beet = "beets.ui:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
